--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,123 @@
+body {
+    justify-content: center;
+    text-align: center;
+    background-color: #EE8329;
+}
+
+header h1 {                                             
+    font-family: 'Pokemon Solid', 'arial', sans-serif;
+    font-size: 40px;
+    background-color: #CD5241;
+}
+
+header h2 {                                     /* pokedex*/
+    font-family: 'arial', sans-serif;
+    margin-bottom: 0;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    padding: 4rem;   
+}
+
+#searchBox {
+    background-color: #CD5241;
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+}
+
+#pokemonName {
+    padding: 2rem;
+    margin: 1rem;
+    font-size: 16px;
+}
+
+button {
+    background-color: #084152;
+    color: white;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 16px 24px;
+}
+
+button :hover {
+    background-color: white;
+    color: #084152;
+}
+
 #pokemon {
-
+    border: red solid;
 }
 
-#img {
-    
+img {
+    display: block;
+    margin-left: auto;
+	margin-right: auto;
 }
+
 
 #description {
-
+    background-color: #084152 ;
+    color: white;
 }
 
 #stats {
+    background-color: #084152 ;
+    color: white;
 
 }
+
+
+/* CSS */
+
+/*
+.button-27 {
+  appearance: none;
+  background-color: #000000;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+.button-27:disabled {
+  pointer-events: none;
+}
+
+.button-27:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button-27:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+  */
