--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,29 @@
 body {
     justify-content: center;
     text-align: center;
-    background-color: #EE8329;
+    background-color: #C5AC10;
 }
 
 header h1 {                                             
     font-family: 'Pokemon Solid', 'arial', sans-serif;
     font-size: 40px;
-    background-color: #CD5241;
-}
-
-header h2 {                                     /* pokedex*/
-    font-family: 'arial', sans-serif;
-    margin-bottom: 0;
+    background-color: #C5AC10;
 }
 
 header {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     padding: 4rem;   
+    margin: 0;
+    justify-content: center;
 }
 
 #searchBox {
-    background-color: #CD5241;
+    background-color: #F6E652;
     padding: 4rem;
     display: flex;
     flex-direction: column;
+    border-radius: 15px;
 }
 
 #pokemonName {
@@ -53,14 +51,43 @@ button :hover {
     color: #084152;
 }
 
-#pokemon {
-    border: red solid;
+#name {
+    font-size: 2rem;
+    font-family: 'ariel', sans-serif ;
+}
+
+#pokemon {                                          /* pokemon container */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: white;
+    font-weight: 400;
+    background-color: #084152;
+    border-radius: 15px;
+}
+
+#nameImg {
+    justify-content: center;
+    margin: 0;
 }
 
 img {
-    display: block;
     margin-left: auto;
 	margin-right: auto;
+    width: 100%;
+    height: auto;
+
+}
+
+#image {
+    width: 300px;
+    height: fit-content;
+
+}
+
+#pichu {
+    width: 10%;
+    margin: 0;
 }
 
 
@@ -69,11 +96,37 @@ img {
     color: white;
 }
 
+#descriptionHeader {
+    display: none;
+}
+
+#abilities {
+    background-color: #084152 ;
+    color: white;
+    margin: 2rem;
+}
+
+#abilitiesHeader {
+    display: none;
+}
+
 #stats {
     background-color: #084152 ;
     color: white;
+    font-size: 2rem;
 
 }
+
+#statsHeader {
+    display: none;
+}
+
+footer {
+    display: flex;
+    margin-top: 6rem;
+    border-top: #1A1A1A solid 2px;
+}
+
 
 
 /* CSS */
